objects/GLA4SF__Glance_Cobrowse_Session__c.object
<CustomObject>
    <description>A Glance CoBrowse session and its related information.</description>
    <fields>
        <fullName>GLA4SF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact the session is related to (if it exists)</description>
        <inlineHelpText>The contact the session is related to (if it exists)</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CobrowseSessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLA4SF__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead related to the session (if it exists)</description>
        <inlineHelpText>The lead related to the session (if it exists)</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>CobrowseSessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLA4SF__Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Live Chat Transcript the session is related to (if it exists)</description>
        <inlineHelpText>The Live Chat Transcript the session is related to (if it exists)</inlineHelpText>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Glance Cobrowse Sessions</relationshipLabel>
        <relationshipName>Glance_Cobrowse_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLA4SF__Live_Chat_Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Chat Visitor</label>
        <referenceTo>LiveChatVisitor</referenceTo>
        <relationshipLabel>Glance Cobrowse Sessions</relationshipLabel>
        <relationshipName>Glance_Cobrowse_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLA4SF__Session_Key__c</fullName>
        <externalId>true</externalId>
        <label>Session Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Glance Cobrowse Session</label>
    <listViews>
        <fullName>GLA4SF__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>GLA4SF__Session_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCB-{0000}</displayFormat>
        <label>Glance Cobrowse Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Glance Cobrowse Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>